# suisa_sendemeldung

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .semrelrc  .travis.yml  404.html  AGENTS.md  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  sitemap.xml  suisa_sendemeldung.conf  suisa_sendemeldung.py  suisa_sendemeldung.spec
.github/: dependabot.yml
.github/workflows/: lint-and-test.yaml  release.yaml  schedule.yaml  semantic-release.yaml
.travis/: rpm.sh
configuration/: index.html
css/: style.css
deployment/: index.html
development/: index.html
docs/: configuration.md  deployment.md  development.md  gen_ref_pages.py  getting-started.md  upgrading.md
docs/css/: style.css
docs/overrides/: home.html
docs/reference/: acrclient.md  settings.md  suisa_sendemeldung.md
etc/: README.md  suisa_sendemeldung.conf  suisa_sendemeldung.toml
etc/systemd/: suisa_sendemeldung.docker.service  suisa_sendemeldung.docker.timer  suisa_sendemeldung.service  suisa_sendemeldung.timer  suisa_sendemeldung@.service  suisa_sendemeldung@.timer
getting-started/: index.html
overrides/: home.html
reference/SUMMARY/: index.html
reference/acrclient/: index.html
reference/settings/: index.html
reference/suisa_sendemeldung/: index.html
search/: search_index.json
suisa_sendemeldung/: acrclient.py  settings.py  suisa_sendemeldung.py
tests/: conftest.py  test_acrclient.py  test_docs.py  test_suisa_sendemeldung.py
tests/__snapshots__/: test_suisa_sendemeldung.ambr
upgrading/: index.html
