[tool.poetry]
name = "suisa_sendemeldung"
version = "0.0.0"
description = "ACRCloud client for SUISA reporting"
repository = "http://github.com/radiorabe/suisa_reporting"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "MIT"
readme = "README.md"
packages = [{include = "suisa_sendemeldung"}]

[tool.poetry.scripts]
suisa_sendemeldung = 'suisa_sendemeldung.suisa_sendemeldung:main'

[tool.poetry.dependencies]
python = "^3.11"
acrclient = "^0.4.1"
ConfigArgParse = "^1.5.5"
iso3901 = "^0.3.0.post1"
openpyxl = "^3.1.2"
pytz = ">=2023.3,<2025.0"
requests = "^2.31.0"
rabe-cridlib = ">=0.10.1,<0.12.0"
dateutils = "^0.6.12"
tqdm = "^4.65.0"
Babel = "^2.12.1"

[tool.poetry.group.dev.dependencies]
black = ">=23.3,<25.0"
flake8 = ">=6,<8"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.0.0"
flake8-string-format = "^0.3.0"
flake8-tuple = "^0.4.1"
freezegun = "^1.2.2"
isort = "^5.12.0"
mock = "^5.0.2"
pytest = ">=7.4,<9.0"
pytest-cov = ">=4.1,<6.0"
pytest-env = ">=0.8.2,<1.2.0"
pytest-pylint = ">=0.19,<0.22"
requests-mock = "^1.11.0"
types-requests = "^2.31.0.1"
wheel = ">=0.40,<0.44"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.14"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocs-autorefs = "^1.0.1"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}
pytest-mypy = "^0.10.3"
types-openpyxl = "^3.1.0.20240311"
types-python-dateutil = "^2.9.0.20240316"
types-pytz = "^2024.1.0.20240203"
types-tqdm = "^4.66.0.20240106"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "--doctest-modules --cov=suisa_sendemeldung --pylint --cov-fail-under=100 --ignore=docs/ --mypy"
filterwarnings = [
    "ignore::DeprecationWarning:pylint",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
