[tool.poetry]
name = "suisa_sendemeldung"
version = "0.0.0"
description = "ACRCloud client for SUISA reporting"
repository = "http://github.com/radiorabe/suisa_reporting"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "MIT"
readme = "README.md"
packages = [{include = "suisa_sendemeldung"}]

[tool.poetry.scripts]
suisa_sendemeldung = 'suisa_sendemeldung.suisa_sendemeldung:cli'

[tool.poetry.dependencies]
python = "^3.12"
acrclient = "^0.5.2"
Babel = "^2.12.1"
dateutils = "^0.6.12"
iso3901 = ">=0.3,<1.2"
openpyxl = "^3.1.2"
pytz = ">=2025.2"
rabe-cridlib = "^0.13.2"
requests = "^2.31.0"
tqdm = "^4.65.0"
typed-settings = {extras = ["attrs", "click", "option-groups"], version = "^25.3.0"}

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"
mkdocs = "^1.5.3"
mkdocs-autorefs = "^1.0.1"
mkdocs-gen-files = ">=0.5,<0.7"
mkdocs-literate-nav = "^0.6.1"
mkdocs-material = "^9.5.14"
mkdocs-section-index = "^0.3.8"
mkdocstrings = {extras = ["python"], version = ">=0.24.1,<1.1.0"}
mock = "^5.0.2"
pre-commit = "^4.5.1"
pytest = ">=7.4,<10.0"
pytest-cov = ">=4.1,<8.0"
pytest-env = ">=0.8.2,<1.6.0"
pytest-mypy = ">=0.10.3,<1.1.0"
pytest-pylint = ">=0.19,<0.22"
pytest-ruff = ">=0.3.1,<0.6.0"
requests-mock = "^1.11.0"
ruff = ">=0.5.1,<0.16.0"
syrupy = ">=4.6.1,<6.0.0"
types-openpyxl = "^3.1.0.20240311"
types-python-dateutil = "^2.9.0.20240316"
types-pytz = ">=2024.1.0.20240203,<2026.0.0.0"
types-requests = "^2.31.0.1"
types-tqdm = "^4.66.0.20240106"
wheel = ">=0.40,<0.47"

[tool.pytest]
minversion = "9.0"
addopts = ["--doctest-modules", "--cov=suisa_sendemeldung", "--cov-fail-under=100", "--ignore=docs/", "--mypy", "--pylint", "--ruff"]

[tool.pylint.design]
max-args = 6
max-positional-arguments = 6
max-locals = 32
min-public-methods = 0

[tool.pylint.format]
max-line-length = 150

[tool.pylint.basic]
class-const-naming-style = "any"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
